third_party/move/move-compiler-v2/tests/checking/typing/bind_duplicate_binding.exp

Diagnostics:
error: duplicate declaration of `x`
  ┌─ tests/checking/typing/bind_duplicate_binding.move:5:17
  │
5 │         let (x, x) = (0, 0);
  │                 ^

note: previous declaration of `x`
  ┌─ tests/checking/typing/bind_duplicate_binding.move:5:14
  │
5 │         let (x, x) = (0, 0);
  │              ^

error: duplicate declaration of `f`
  ┌─ tests/checking/typing/bind_duplicate_binding.move:6:19
  │
6 │         let (f, R{f}, f) = (0, R { f: 0 }, 0);
  │                   ^

note: previous declaration of `f`
  ┌─ tests/checking/typing/bind_duplicate_binding.move:6:14
  │
6 │         let (f, R{f}, f) = (0, R { f: 0 }, 0);
  │              ^

error: duplicate declaration of `f`
  ┌─ tests/checking/typing/bind_duplicate_binding.move:6:23
  │
6 │         let (f, R{f}, f) = (0, R { f: 0 }, 0);
  │                       ^
